lavf/riffenc: Set correct block align for mp2.

Rounding by Michael.

Fixes ticket #4565.